--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-salvo = { version = "*", features = ["logging"] }
+salvo = { version = "*", features = ["logging", "serve-static"] }
 tokio = { version = "1", features = ["macros", "full"] }
 log = "0.4"
 fast_log = "1.5"
@@ -17,3 +17,5 @@ rbdc-mysql={version="0.1"}
 tracing = "0.1"
 tracing-subscriber = "0.3"
 once_cell = "1.12.0"
+uuid = "1.3.0"
+rust-embed = "6.4.2"
